coloquei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,11 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Meu primeiro site upado para o github</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, in. Tenetur, voluptate.
+         Itaque maxime consectetur et 
+        temporibus magni quibusdam repudiandae hic numquam, error repellat
+         provident optio sapiente! Consequuntur, sequi distinctio.</p>
     
 </body>
 </html>
