--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>site para o github</title>
 </head>
 <body>
@@ -14,6 +15,14 @@
          Itaque maxime consectetur et 
         temporibus magni quibusdam repudiandae hic numquam, error repellat
          provident optio sapiente! Consequuntur, sequi distinctio.</p>
+
+
+
+         <div>
+
+         </div>
+
+
     
 </body>
 </html>
